--- a/MyGraphQl.Api/Properties/launchSettings.json
+++ b/MyGraphQl.Api/Properties/launchSettings.json
@@ -29,10 +29,11 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "IIS Express": {
-      "commandName": "IISExpress",
+    "GraphqlPlayground": {
+      "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchUrl": "ui/playground",
+      "applicationUrl": "https://localhost:7042;http://localhost:5135",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
