--- a/MyGraphQl.Api/MyGraphQl.Api.csproj
+++ b/MyGraphQl.Api/MyGraphQl.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -8,11 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GraphQL" Version="7.8.0" />
-    <PackageReference Include="GraphQL.MicrosoftDI" Version="7.8.0" />
-    <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="7.7.0" />
-    <PackageReference Include="GraphQL.Server.Ui.GraphiQL" Version="7.7.0" />
-    <PackageReference Include="GraphQL.Server.Ui.Playground" Version="7.7.0" />
+    <PackageReference Include="HotChocolate.AspNetCore" Version="14.0.0-p.31" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
