--- a/MyGraphQl.Api/Properties/launchSettings.json
+++ b/MyGraphQl.Api/Properties/launchSettings.json
@@ -29,10 +29,10 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "GraphqlPlayground": {
+    "Graphql": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "ui/playground",
+      "launchUrl": "graphql",
       "applicationUrl": "https://localhost:7042;http://localhost:5135",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
