--- a/MyGraphQl.Api/MyGraphQl.Api.csproj
+++ b/MyGraphQl.Api/MyGraphQl.Api.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="GraphQL" Version="7.8.0" />
+    <PackageReference Include="GraphQL.DataLoader" Version="7.8.0" />
     <PackageReference Include="GraphQL.MicrosoftDI" Version="7.8.0" />
     <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="7.7.0" />
     <PackageReference Include="GraphQL.Server.Ui.GraphiQL" Version="7.7.0" />
